# fail2ban_bot

./: .env.example  .gitignore  Dockerfile  README.md  fail2ban_bot copy.py  fail2ban_bot.py  fail2ban_bot.todo  main.py  pyproject.toml  requirements.txt
app/: config.py  db_manager.py
app/handlers/: common.py  stats.py
app/keyboards/: callback_data.py  inline.py
app/middlewares/: admin.py
app/services/: fail2ban.py  geoip.py
app/utils/: logging_setup.py  plotting.py
